Fix inversion between bg-base & bg-primary on dark mode

--- a/src/styl/_variables/_color.styl
+++ b/src/styl/_variables/_color.styl
@@ -49,8 +49,8 @@
     --color-primary: $color-foreground-1-dark
     --color-secondary: $color-foreground-2-dark
 
-    --color-bg-base: $color-background-0-dark
-    --color-bg-primary: $color-background-1-dark
+    --color-bg-base: $color-background-1-dark
+    --color-bg-primary: $color-background-0-dark
     --color-bg-secondary: $color-background-2-dark
     --color-bg-tertiary: $color-background-4-dark
 
